--- a/html/src/styles.css
+++ b/html/src/styles.css
@@ -1,1 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  padding: 0px;
+  margin: 0px;
+  font-family: monospace;
+  background-color: darkgrey;
+}
+
+.frontpage * {
+  text-align: center;
+  background-color: lightgreen;
+  padding: 2%;
+}
+
+.login {
+  background-color: lightblue;
+  border-radius: 10%;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top:  15%;
+  margin-bottom: 15%;
+  padding: 20%;
+  text-align: center;
+}
+
+.login * {
+  background-color: lightblue;
+}
+
+.login input {
+  background-color: white;
+}
+
+.button a h3 {
+  background-color: gray;
+  padding: 2%;
+  display: inline-block;
+  margin: 3%;
+}
+
+.loading * {
+  padding: 30%;
+  width: 40%;
+}
