Formatted css files for easier editing, started to create custom named classes for css styling, minor changes to front page.

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -220,6 +220,18 @@ a:hover, a:focus {
 
 
 /* ==========================================================================
+   Text Formats
+   ========================================================================== */
+
+.iphonetext-left-right {
+
+}
+.iphonetext-middle {
+  
+}
+
+
+/* ==========================================================================
    Nav Styles
    ========================================================================== */
 
@@ -467,7 +479,7 @@ footer {
   transition: all 0.25s ease-in-out;
 }
 .pricing-table.active {
-  box-shadow: 0px 0px 12px rgba(41,46,50,0.6); 
+  box-shadow: 0px 0px 12px rgba(41,46,50,0.6);
   position: absolute;
   margin: auto;
   z-index: 200;
@@ -602,7 +614,7 @@ footer {
    Mobile styles
    ========================================================================== */
 /* Landscape phones and down */
-@media (max-width: 480px) { 
+@media (max-width: 480px) {
 
 .btn-lg {
   font-size: 12.5px;
@@ -620,7 +632,11 @@ footer {
   letter-spacing: 0px;
 }
 
-#be-the-first { 
+.white {
+   color: black;
+}
+
+#be-the-first {
       background-attachment: scroll;
   }
 
@@ -628,9 +644,9 @@ footer {
 
 
 /* Landscape phone to portrait tablet */
-@media (min-width: 481px) and (max-width: 767px) { 
+@media (min-width: 481px) and (max-width: 767px) {
 
-#be-the-first { 
+#be-the-first {
       background-attachment: scroll;
   }
 
@@ -640,10 +656,10 @@ footer {
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 991px) {
 
-#be-the-first { 
+#be-the-first {
       background-attachment: scroll;
   }
-  
+
 }
 
 
@@ -652,15 +668,10 @@ footer {
 @media (min-width: 992px) and (max-width: 1199px) {
 
 }
-     
+
 
 
 /* Large screens ----------- */
 @media (min-width: 1200px) and (max-width: 3000px) {
 
-}   
-
-
-
-
-
+}
