Created log in page, not sure how to continue with passing of information between pages. Redirects, styling, and content should be up to snuff now. All we have to do is get information passed around.

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -612,7 +612,17 @@ footer {
     opacity: 1;
 }
 
+.todo-form input{
+  color: black;
+  font-weight: normal;
+}
 
+.todo-form p{
+  color: #fff;
+  font-size: 2em;
+  font-style: normal;
+  font-weight: bold;
+}
 
 
 /* ==========================================================================
