--- a/html/css/main.css
+++ b/html/css/main.css
@@ -185,6 +185,9 @@ a:hover, a:focus {
 .margin-100 {
     margin-bottom: 100px !important;
 }
+.margin-20right {
+    margin-right: 100px;
+}
 
 
 /*-----------------Colors------------------*/
