Stripped message list page and added core functionality. Aside from logout and some error checking, q works... kinda.

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -48,6 +48,8 @@ p {
   font-weight: 400;
 }
 
+/* Some misc stuff for messages and such:*/
+
 /*------------------Utilities---------------------*/
 a {
   color: inherit;
