undo commit 4ab5cb0bc8066f6634ba64ce388a795f86d0ab4b

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -187,7 +187,7 @@ a:hover, a:focus {
 .margin-100 {
     margin-bottom: 100px !important;
 }
-.margin-20right {
+.margin-right {
     margin-right: 100px;
 }
 
